create a separate folder and file for controllers

--- a/app/templates/facts2.html
+++ b/app/templates/facts2.html
@@ -7,8 +7,8 @@
     <p>$283,200 is the absolute highest amount of money you can win on Jeopardy.</p>
     <p>101 Dalmatians, Peter Pan, Lady and the Tramp, and Mulan are the only Disney cartoons where both parents are present and don't die throughout the movie.</p>
     <p>
-      <a class="button icon ion-home" href="#/tab/home"> Home</a>
-      <a class="button icon ion-chevron-left" href="#/tab/facts"> Scientific Facts</a>
+      <a class="button icon ion-home" href="#/tabs/home"> Home</a>
+      <a class="button icon ion-chevron-left" href="#/tabs/facts"> Scientific Facts</a>
     </p>
   </ion-content>
 </ion-view>
