--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,7 +4,7 @@
     <p>Free and open source, Ionic offers a library of mobile-optimized HTML, CSS and JS components for building highly interactive apps.</p>
     <p>Built with Sass and optimized for AngularJS.</p>
     <p>
-      <a class="button icon icon-right ion-chevron-right" href="#/tab/navstack">Tabs Nav Stack</a>
+      <a class="button icon icon-right ion-chevron-right" href="#/tabs/navstack">Tabs Nav Stack</a>
     </p>
   </ion-content>
 </ion-view>
