--- a/app/templates/facts.html
+++ b/app/templates/facts.html
@@ -6,8 +6,8 @@
     <p>A cockroach will live nine days without it's head, before it starves to death.</p>
     <p>Polar bears are left handed.</p>
     <p>
-      <a class="button icon ion-home" href="#/tab/home"> Home</a>
-      <a class="button icon icon-right ion-chevron-right" href="#/tab/facts2">More Facts</a>
+      <a class="button icon ion-home" href="#/tabs/home"> Home</a>
+      <a class="button icon icon-right ion-chevron-right" href="#/tabs/facts2">More Facts</a>
     </p>
   </ion-content>
 </ion-view>
