--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
     navigate to child views of each tab and notice how
     each tab has its own navigation history.</p>
     <p>
-      <a class="button icon icon-right ion-chevron-right" href="#/tab/facts">Scientific Facts</a>
+      <a class="button icon icon-right ion-chevron-right" href="#/tabs/facts">Scientific Facts</a>
     </p>
   </ion-content>
 </ion-view>
