--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -5,8 +5,16 @@
       <ion-nav-view name="home-tab"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="About" icon="ion-ios-information" href="#/tab/about">
+    <ion-tab title="About" icon="ion-ios-information" href="#/tabs/about">
       <ion-nav-view name="about-tab"></ion-nav-view>
+    </ion-tab>
+
+    <ion-tab title="Chats" icon="ion-ios-information" href="#/tabs/chats">
+      <ion-nav-view name="tab-chats"></ion-nav-view>
+    </ion-tab>
+
+    <ion-tab title="Account" icon="ion-ios-information" href="#/tabs/account">
+      <ion-nav-view name="tab-account"></ion-nav-view>
     </ion-tab>
 
     <ion-tab title="Sign-Out" icon="ion-log-out" href="#/sign-in">
