--- a/app/templates/sign-in.html
+++ b/app/templates/sign-in.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Sign-In">
+<ion-view view-title="Infoamigos">
   <ion-content>
     <div class="list">
       <label class="item item-input">
-        <span class="input-label">Username</span>
+        <span class="input-label">Usuario</span>
         <input type="text" ng-model="user.username">
       </label>
       <label class="item item-input">
@@ -12,13 +12,10 @@
     </div>
     <div class="padding">
       <button class="button button-block button-positive" ng-click="signIn(user)">
-        Sign-In
+        Logearse
       </button>
       <p class="text-center">
-        <a href="#/forgot-password">Forgot password</a>
-      </p>
-      <p class="text-center">
-        <a href="#/tabs/chats">chats</a>
+        <a href="#/forgot-password">Olvidaste tu password</a>
       </p>
     </div>
   </ion-content>
