--- a/app/templates/tab-account.html
+++ b/app/templates/tab-account.html
@@ -1,9 +1,21 @@
-<ion-view view-title="Account">
+<ion-view view-title="Menu">
   <ion-content>
     <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
+      <ion-item>
+         Materias
+      </ion-item>
+      <ion-item>
+         Aulas
+      </ion-item>
+      <ion-item>
+         Eventos
+      </ion-item>
+      <ion-item>
+         Horarios
+      </ion-item>
+    <!-- <ion-toggle  ng-model="settings.enableFriends">
         Enable Friends
-    </ion-toggle>
+    </ion-toggle> -->
     </ion-list>
   </ion-content>
 </ion-view>
