--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,10 +1,11 @@
-<ion-view view-title="About">
+<ion-view view-title="Acerca">
   <ion-content padding="true">
-    <h3>Create hybrid mobile apps with the web technologies you love.</h3>
-    <p>Free and open source, Ionic offers a library of mobile-optimized HTML, CSS and JS components for building highly interactive apps.</p>
-    <p>Built with Sass and optimized for AngularJS.</p>
+    <h3>Informacion acerca de Infoamigos</h3>
     <p>
-      <a class="button icon icon-right ion-chevron-right" href="#/tabs/navstack">Tabs Nav Stack</a>
+      Aca vendra la informacion acerca de la aplicacion
     </p>
+    <!-- <p>
+      <a class="button icon icon-right ion-chevron-right" href="#/tabs/navstack">Tabs Nav Stack</a>
+    </p> -->
   </ion-content>
 </ion-view>
