--- a/app/templates/forgot-password.html
+++ b/app/templates/forgot-password.html
@@ -1,15 +1,10 @@
-<ion-view view-title="Forgot Password">
+<ion-view view-title="Olvidaste Password">
   <ion-content padding="true">
     <p>
-      Yeah this is just a demo showing how views can be shown without tabs, then you can navigate
-      to views within tabs. Additionally, only one set of tabs needs to be written for all of the different views that should go inside the tabs. (Compared to written the same tab links in the footer of every view that's in a tab.)
+      Aca vendra una opcion para poder recuperar el password
     </p>
     <p>
-      There's no username/password, just click
-      the Sign-In button back a the sign-in view.
-    </p>
-    <p>
-      Return to <a href="#/sign-in">Sign-In</a>.
+      Volver a <a href="#/sign-in">Logearse</a>.
     </p>
   </ion-content>
 </ion-view>
