--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,10 @@
-<ion-view view-title="Home">
+<ion-view view-title="Pagina Principal">
   <ion-content padding="true">
-    <p>Example of Ionic tabs. Navigate to each tab, and
-    navigate to child views of each tab and notice how
-    each tab has its own navigation history.</p>
     <p>
-      <a class="button icon icon-right ion-chevron-right" href="#/tabs/facts">Scientific Facts</a>
+       Aca se mostrara nuestra timeline con todos los posts que nos interesan
     </p>
+    <!-- <p>
+      <a class="button icon icon-right ion-chevron-right" href="#/tabs/facts">Scientific Facts</a>
+    </p> -->
   </ion-content>
 </ion-view>
