--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -5,19 +5,19 @@
       <ion-nav-view name="home-tab"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="About" icon="ion-ios-information" href="#/tabs/about">
-      <ion-nav-view name="about-tab"></ion-nav-view>
-    </ion-tab>
-
-    <ion-tab title="Chats" icon="ion-ios-information" href="#/tabs/chats">
+    <!-- <ion-tab title="Chats" icon="ion-ios-information" href="#/tabs/chats">
       <ion-nav-view name="tab-chats"></ion-nav-view>
-    </ion-tab>
+    </ion-tab> -->
 
-    <ion-tab title="Account" icon="ion-ios-information" href="#/tabs/account">
+    <ion-tab title="Menu" icon="ion-ios-information" href="#/tabs/account">
       <ion-nav-view name="tab-account"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Sign-Out" icon="ion-log-out" href="#/sign-in">
+    <ion-tab title="Acerca" icon="ion-ios-information" href="#/tabs/about">
+      <ion-nav-view name="about-tab"></ion-nav-view>
+    </ion-tab>
+
+    <ion-tab title="Salir" icon="ion-log-out" href="#/sign-in">
     </ion-tab>
 
   </ion-tabs>
