application till now

--- a/app/templates/sign-in.html
+++ b/app/templates/sign-in.html
@@ -17,6 +17,9 @@
       <p class="text-center">
         <a href="#/forgot-password">Olvidaste tu password</a>
       </p>
+      <p class="text-center">
+        <a href="#/register">Registrate</a>
+      </p>
     </div>
   </ion-content>
 </ion-view>
