--- a/app/templates/tab-account.html
+++ b/app/templates/tab-account.html
@@ -1,21 +1,15 @@
 <ion-view view-title="Menu">
   <ion-content>
     <ion-list>
-      <ion-item>
+      <ion-item href="#/tabs/topics">
          Materias
       </ion-item>
-      <ion-item>
+      <ion-item href="#/tabs/aulas">
          Aulas
       </ion-item>
-      <ion-item>
+      <ion-item href="#/tabs/eventos">
          Eventos
       </ion-item>
-      <ion-item>
-         Horarios
-      </ion-item>
-    <!-- <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle> -->
     </ion-list>
   </ion-content>
 </ion-view>
