--- a/app/templates/aula.html
+++ b/app/templates/aula.html
@@ -4,6 +4,7 @@
       <ion-item ng-repeat="aula in aulas">
          <p>{{aula.name}}</p>
          <p>Piso {{aula.piso}}</p>
+		 <p> horarios </p>
       </ion-item>
       <ion-item href="#/tabs/aulas/create">
          <p class="text-center"> Crear</p>
