Add side menu and refactoring

--- a/app/templates/create-event.html
+++ b/app/templates/create-event.html
@@ -2,22 +2,22 @@
   <ion-content padding="true">
     <label class="item item-input">
       <span class="input-label">Nombre</span>
-      <input type="text" ng-model="evento.name">
+      <input type="text" ng-model="event.name">
     </label>
     <label class="item item-input">
       <span class="input-label">Descripcion</span>
-      <input type="text" ng-model="evento.description">
+      <input type="text" ng-model="event.description">
     </label>
     <label class="item item-input">
       <span class="input-label">Fecha</span>
-      <input type="date" ng-model="evento.date">
+      <input type="date" ng-model="event.date">
     </label>
     <label class="item item-input">
       <span class="input-label">Lugar</span>
-      <input type="text" ng-model="evento.place">
+      <input type="text" ng-model="event.place">
     </label>
     <div class="padding">
-      <button class="button button-block button-positive" ng-click="create(evento)">
+      <button class="button button-block button-dark" ng-click="create(event)">
         Crear
       </button>
     </div>
