--- a/app/templates/create-place.html
+++ b/app/templates/create-place.html
@@ -2,14 +2,14 @@
   <ion-content padding="true">
     <label class="item item-input">
       <span class="input-label">Nombre</span>
-      <input type="text" ng-model="aula.name">
+      <input type="text" ng-model="place.name">
     </label>
     <label class="item item-input">
       <span class="input-label">Piso</span>
-      <input type="text" ng-model="aula.piso">
+      <input type="text" ng-model="place.floor">
     </label>
     <div class="padding">
-      <button class="button button-block button-positive" ng-click="create(evento)">
+      <button class="button button-block button-dark" ng-click="create(place)">
         Crear
       </button>
     </div>
