--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Timeline">
-  <ion-content header-shrink scroll-event-interval="5">
+  <ion-content padding="true" header-shrink scroll-event-interval="5">
     <h2 class="text-center">
       Bienvenido {{user.userName}}
     </h2>
