--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Registro">
-  <ion-content padding="true">
+<ion-view view-title="Materias">
+  <ion-content>
     <label class="item item-input">
       <span class="input-label">Nombre</span>
       <input type="text" ng-model="user.firstName">
@@ -13,18 +13,8 @@
       <input type="text" ng-model="user.userName">
     </label>
     <label class="item item-input">
-      <span class="input-label">Password</span>
-      <input type="password" ng-model="user.password">
-    </label>
-    <label class="item item-input">
       <span class="input-label">Email</span>
       <input type="email" ng-model="user.email">
     </label>
-    <div class="padding">
-      <button class="button button-block button-dark" ng-click="signUp(user)">
-        Registrarse
-      </button>
-    </div>
   </ion-content>
-
 </ion-view>
