--- a/app/templates/topic-detail.html
+++ b/app/templates/topic-detail.html
@@ -1,11 +1,7 @@
-<ion-view view-title="INF - {{sigla}}">
-  <ion-content header-shrink scroll-event-interval="5">
-
+<ion-view view-title=" {{topic.name}} ">
+  <ion-content>
     <div ng-repeat="post in posts" class="list card">
-<!-- 
-      <div class="item item-header">
-        <h2>{{post.topic}}</h2>
-      </div> -->
+
       <div class="item item-content">
         <p>{{post.name}}</p>
         <p>{{post.date}}</p>
@@ -35,6 +31,7 @@
           Share
         </a>
       </div>
+
     </div>
   </ion-content>
 </ion-pane>
