application release candidate

--- a/app/templates/create-event.html
+++ b/app/templates/create-event.html
@@ -1,8 +1,9 @@
 <ion-view view-title="Crear Evento">
+
   <ion-content padding="true">
     <label class="item item-input">
-      <span class="input-label">Nombre</span>
-      <input type="text" ng-model="event.name">
+      <span class="input-label">Titulo</span>
+      <input type="text" ng-model="event.title">
     </label>
     <label class="item item-input">
       <span class="input-label">Descripcion</span>
