--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Materias">
+<ion-view view-title="Perfil">
   <ion-content>
     <label class="item item-input">
       <span class="input-label">Nombre</span>
