--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,17 +1,19 @@
 <ion-view view-title="Timeline">
   <ion-content padding="true" header-shrink scroll-event-interval="5">
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="loadPosts()"></ion-refresher>
     <h2 class="text-center">
-      Bienvenido {{user.userName}}
+      Bienvenido {{userName}}
     </h2>
 
     <div ng-repeat="post in posts" class="list card">
 
       <div class="item item-header">
-        <h2>{{post.topic}}</h2>
+        <h2>{{post.topic.name}}</h2>
+        <h2>{{post.title}}</h2>
       </div>
       <div class="item item-content">
-        <p>{{post.name}}</p>
-        <p>{{post.date}}</p>
+        <!-- <p>{{post.name}}</p> -->
+        <p>{{post.date | date}}</p>
       </div>
 
       <div class="item item-body">
@@ -20,16 +22,16 @@
         </p>
         <p>
           <a href="#" class="subdued">{{post.likes}} Like</a>
-          <a href="#" class="subdued">{{post.comments}} Comments</a>
+          <a href="#" class="subdued">Comments</a>
         </p>
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" href="#">
+        <a class="tab-item" ng-click="likeIt(post)">
           <i class="icon ion-thumbsup"></i>
           Like
         </a>
-        <a class="tab-item" href="#">
+        <a class="tab-item" href="#/topics/{{post.topic.id}}/post/{{post.id}}">
           <i class="icon ion-chatbox"></i>
           Comment
         </a>
