--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,7 +6,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Usuario</span>
-          <input type="text" ng-model="user.username">
+          <input type="text" ng-model="user.user">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
